# vizard

./: .gitignore  LICENSE  README.md  pom.xml
comparison-test-server/: README.md  pom.xml  vizard-db-test.sql
comparison-test-server/src/main/java/org/conggroup/vizard/comparsion/: ServerApplication.java
comparison-test-server/src/main/java/org/conggroup/vizard/comparsion/config/: OperatorProvider.java  (+1 more)
comparison-test-server/src/main/resources/: application.properties
crypto/: README.md  pom.xml
crypto/src/main/native/: CMakeLists.txt  LICENSE
crypto/src/main/native/dpf/: dpf_jni.cpp  dpf_jni.h  test.cpp
crypto/src/main/native/dpf/common/: AES.cpp  AES.h  DPF.cpp  DPF.h  Defines.h  PRG.hpp
crypto/src/main/native/prf/: prf_jni.cpp  prf_jni.h  test.cpp
crypto/src/main/native/prf/common/: AES.cpp  AES.h  PRF.cpp  PRF.h
crypto/src/main/resources/natives/osx_64/: libdpf.dylib  libprf.dylib
data-consumer/: README.md  pom.xml
data-consumer/src/main/java/org/conggroup/vizard/dataconsumer/: DataConsumerApplication.java
data-consumer/src/main/resources/: application.properties
data-owner/: README.md  pom.xml
data-owner/src/main/java/org/conggroup/vizard/dataowner/: DataOwnerApplication.java
data-owner/src/main/resources/: application.properties
result-release-control/: README.md  pom.xml
result-release-control/src/main/java/org/conggroup/vizard/resultreleasecontrol/: ResultReleaseControlApplication.java
result-release-control/src/main/resources/: application.properties
server/: README.md  pom.xml  vizard-db.sql
server/src/main/java/org/conggroup/vizard/server/: ServerApplication.java
server/src/main/resources/: application.properties
(+134 files in other folders)
